2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* strtoul.c: New file, trvial link to ../../gettext-tools/lib.
	* Makefile.am (libgrt_a_SOURCES): Remove strtoul.c.
	(LIBADD_SOURCE): Add strtoul.c here.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES): Add allocsa.h, allocsa.c. Needed
	when --enable-relocatable is used.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES): Remove error.h, error.c.
	(LIBADD_SOURCE): Add error.h, error.c here.
	* error.h: New file.
	* error.c: New file.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES): Remove getopt files.
	(LIBADD_SOURCE): Add getopt files here, except getopt.h.
	(BUILT_SOURCES): New variable.
	(EXTRA_DIST, all-local, getopt.h): Support for getopt module.
	* getopt.c: New file.
	* getopt1.c: New file.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-24  Bruno Haible  <bruno@clisp.org>

	* alloca.c: Remove file.
	* Makefile.am (LIBADD_SOURCE): Remove alloca.c.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_LIBADD): Drop @ALLOCA@.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.

2003-10-09  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgrt_a_SOURCES): Use xalloc.h instead of xmalloc.h.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	Portability to SunOS 4.